Configuring connection to AnyBlock, failing ssl certificate

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 PORT=5001
 
 DB_NAME=cent
-DB_PATH='./db/cent.dev.sqlite'
+DB_PATH=./db/cent.dev.sqlite
+
+ANYBLOCK_DB_HOST=
+ANYBLOCK_DB_PORT=
+ANYBLOCK_DB_USER=
+ANYBLOCK_DB_PASSWORD=
+ANYBLOCK_DB_NAME=
 
