--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/sequelize": "^8.0.0",
     "cross-env": "^7.0.3",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.45"
+    "sequelize": "^6.17.0",
+    "sequelize-typescript": "^2.1.3",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
