Fixed Anyblock connection issues, added example, cleaned up constants

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-PORT=5001
+PORT=
 
-DB_NAME=cent
-DB_PATH=./db/cent.dev.sqlite
+DB_PATH=
 
 ANYBLOCK_DB_HOST=
 ANYBLOCK_DB_PORT=
-ANYBLOCK_DB_USER=
+ANYBLOCK_DB_USERNAME=
 ANYBLOCK_DB_PASSWORD=
-ANYBLOCK_DB_NAME=
+ANYBLOCK_DB_DATABASE=
 
