--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT=5001
 DB_PATH=./db/cent.dev.sqlite
 QUERY_BLOCK_RANGE_SIZE=1000
 QUERY_BLOCK_RANGE_FLOOR=5000000
+QUERY_BLOCK_RANGE_CEILING=
 
 ANYBLOCK_DB_HOST=
 ANYBLOCK_DB_PORT=
