refactored sqlite to postgres

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,20 @@
+# APP
 PORT=5001
 
-DB_PATH=./db/cent.dev.sqlite
+# DATABASE
+DB_HOST=localhost
+DB_PORT=5002
+DB_USERNAME=user
+DB_PASSWORD=passw0rd!
+DB_DATABASE=cent_dev
+DB_CONTAINER_PORT=5432
+
+# DUMP SCRIPT
 QUERY_BLOCK_RANGE_SIZE=1000
 QUERY_BLOCK_RANGE_FLOOR=5000000
 QUERY_BLOCK_RANGE_CEILING=
 
+# ANYBLOCK
 ANYBLOCK_DB_HOST=
 ANYBLOCK_DB_PORT=
 ANYBLOCK_DB_USERNAME=
