--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch",
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
+    "db:dev:build": "docker-compose --env-file ./.env.development build",
+    "db:dev:start": "docker-compose --env-file ./.env.development up -d",
+    "db:dev:stop": "docker-compose --env-file ./.env.development down"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -33,8 +36,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sequelize": "^6.17.0",
-    "sequelize-typescript": "^2.1.3",
-    "sqlite3": "^5.0.2"
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
