--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=development  nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:debug": "cross-env NODE_ENV=development  nest start --debug --watch",
+    "start:dev": "yarn db:dev:start && cross-env NODE_ENV=development nest start --watch",
+    "stop:dev": "yarn db:dev:stop",
+    "start:debug": "yarn db:dev:start && cross-env NODE_ENV=development  nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env NODE_ENV=test jest",
@@ -19,7 +20,6 @@
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
-    "db:dev:build": "docker-compose --env-file ./.env.development build",
     "db:dev:start": "docker-compose --env-file ./.env.development up -d",
     "db:dev:stop": "docker-compose --env-file ./.env.development down"
   },
