--- a/package.json
+++ b/package.json
@@ -1,85 +1,32 @@
 {
   "name": "cent-social-index",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
+  "main": "index.js",
+  "repository": "https://github.com/dOrgTech/cent-social-index",
+  "author": "d0rg Tech",
   "license": "UNLICENSED",
+  "private": true,
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env NODE_ENV=development  nest start",
-    "start:dev": "yarn db:dev:start && cross-env NODE_ENV=development nest start --watch",
-    "stop:dev": "yarn db:dev:stop",
-    "start:debug": "yarn db:dev:start && cross-env NODE_ENV=development  nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:watch": "cross-env NODE_ENV=test jest --watch",
-    "test:cov": "cross-env NODE_ENV=test jest --coverage",
-    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
-    "db:dev:start": "docker-compose --env-file ./.env.development up -d",
-    "db:dev:stop": "docker-compose --env-file ./.env.development down"
-  },
-  "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/sequelize": "^8.0.0",
-    "cross-env": "^7.0.3",
-    "lodash": "^4.17.21",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "sequelize": "^6.17.0",
-    "sequelize-typescript": "^2.1.3"
+    "setup": "lerna exec yarn",
+    "server:build": "lerna exec yarn build",
+    "server:start": "lerna exec yarn start",
+    "server:start:dev": "lerna exec --scope @cent-social-index/server --scope @cent-social-index/server yarn 'start:dev'",
+    "server:stop:dev": "lerna exec --scope @cent-social-index/server yarn 'db:dev:stop'",
+    "server:start:debug": "lerna exec --scope @cent-social-index/server yarn 'star:debug'",
+    "server:start:prod": "lerna exec --scope @cent-social-index/server yarn 'start:prod'",
+    "server:lint": "lerna exec --scope @cent-social-index/server yarn lint",
+    "server:test": "lerna exec --scope @cent-social-index/server yarn test",
+    "server:test:watch": "lerna exec --scope @cent-social-index/server yarn 'test:watch'",
+    "server:test:cov": "lerna exec --scope @cent-social-index/server yarn 'test:cov'",
+    "server:test:debug": "lerna exec --scope @cent-social-index/server yarn 'test:debug'",
+    "server:test:e2e": "lerna exec --scope @cent-social-index/server yarn 'test:e2'",
+    "server:db:dev:start": "lerna exec --scope @cent-social-index/server yarn 'db:dev:start'",
+    "server:db:dev:stop": "lerna exec --scope @cent-social-index/server yarn 'db:dev:stop'"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "lerna": "^4.0.0"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
+  "workspaces": ["packages/*"],
   "volta": {
     "node": "16.14.0"
   }
