--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,44 +25,44 @@
     "db:dev:stop": "docker-compose --env-file ./.env.development down"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/sequelize": "^8.0.0",
-    "cross-env": "^7.0.3",
-    "lodash": "^4.17.21",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "sequelize": "^6.17.0",
-    "sequelize-typescript": "^2.1.3"
+    "@nestjs/common": "8.0.0",
+    "@nestjs/config": "1.2.0",
+    "@nestjs/core": "8.0.0",
+    "@nestjs/platform-express": "8.0.0",
+    "@nestjs/sequelize": "8.0.0",
+    "cross-env": "7.0.3",
+    "lodash": "4.17.21",
+    "pg": "8.7.3",
+    "pg-hstore": "2.3.4",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.2.0",
+    "sequelize": "6.17.0",
+    "sequelize-typescript": "2.1.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "8.0.0",
+    "@nestjs/schematics": "8.0.0",
+    "@nestjs/testing": "8.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "@types/node": "16.0.0",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "eslint": "8.0.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-prettier": "4.0.0",
+    "jest": "27.2.5",
+    "prettier": "2.3.2",
+    "source-map-support": "0.5.20",
+    "supertest": "6.1.3",
+    "ts-jest": "27.0.3",
+    "ts-loader": "9.2.3",
+    "ts-node": "10.0.0",
+    "tsconfig-paths": "3.10.1",
+    "typescript": "4.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
