--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "classnames": "2.3.1",
     "lodash": "4.17.21",
     "next": "12.0.9",
@@ -22,6 +23,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/lodash": "4.14.178",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
