front-end ready

--- a/package.json
+++ b/package.json
@@ -7,29 +7,26 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "server:build": "lerna exec yarn build",
-    "server:start": "lerna exec yarn start",
-    "server:start:dev": "lerna exec --scope @cent-social-index/server yarn 'start:dev'",
-    "server:start:dev:dump": "lerna exec --scope @cent-social-index/server yarn 'start:dev:dump'",
-    "server:stop:dev": "lerna exec --scope @cent-social-index/server yarn 'db:dev:stop'",
-    "server:start:debug": "lerna exec --scope @cent-social-index/server yarn 'star:debug'",
-    "server:start:prod": "lerna exec --scope @cent-social-index/server yarn 'start:prod'",
-    "server:lint": "lerna exec --scope @cent-social-index/server yarn lint",
-    "server:test": "lerna exec --scope @cent-social-index/server yarn test",
-    "server:test:watch": "lerna exec --scope @cent-social-index/server yarn 'test:watch'",
-    "server:test:cov": "lerna exec --scope @cent-social-index/server yarn 'test:cov'",
-    "server:test:debug": "lerna exec --scope @cent-social-index/server yarn 'test:debug'",
-    "server:test:e2e": "lerna exec --scope @cent-social-index/server yarn 'test:e2'",
-    "server:db:dev:start": "lerna exec --scope @cent-social-index/server yarn 'db:dev:start'",
-    "server:db:dev:stop": "lerna exec --scope @cent-social-index/server yarn 'db:dev:stop'",
-    "client:start": "lerna exec --scope @cent-social-index/client yarn start",
-    "client:start:dev": "lerna exec --scope @cent-social-index/client yarn dev",
-    "client:build": "lerna exec --scope @cent-social-index/client yarn build",
-    "client:lint": "lerna exec --scope @cent-social-index/client yarn lint",
-    "client:test": "lerna exec --scope @cent-social-index/client yarn test"
-  },
-  "devDependencies": {
-    "lerna": "^4.0.0"
+    "server:build": "yarn workspace @cent-social-index/server build",
+    "server:start": "yarn workspace @cent-social-index/server start",
+    "server:start:dev": "yarn workspace @cent-social-index/server start:dev",
+    "server:start:dev:dump": "yarn workspace @cent-social-index/server start:dev:dump",
+    "server:stop:dev": "yarn workspace @cent-social-index/server db:dev:stop",
+    "server:start:debug": "yarn workspace @cent-social-index/server star:debug",
+    "server:start:prod": "yarn workspace @cent-social-index/server start:prod",
+    "server:lint": "yarn workspace @cent-social-index/server lint",
+    "server:test": "yarn workspace @cent-social-index/server test",
+    "server:test:watch": "yarn workspace @cent-social-index/server test:watch",
+    "server:test:cov": "yarn workspace @cent-social-index/server test:cov",
+    "server:test:debug": "yarn workspace @cent-social-index/server test:debug",
+    "server:test:e2e": "yarn workspace @cent-social-index/server test:e2",
+    "server:db:dev:start": "yarn workspace @cent-social-index/server db:dev:start",
+    "server:db:dev:stop": "yarn workspace @cent-social-index/server db:dev:stop",
+    "client:start": "yarn workspace @cent-social-index/client start",
+    "client:start:dev": "yarn workspace @cent-social-index/client dev",
+    "client:build": "yarn workspace @cent-social-index/client build",
+    "client:lint": "yarn workspace @cent-social-index/client lint",
+    "client:test": "yarn workspace @cent-social-index/client test"
   },
   "workspaces": [
     "packages/*"
