--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -17,5 +17,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": [
+    "src", "decs.d.ts",
+  ]
 }
