--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,7 +17,8 @@
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "1.49.0"
+    "sass": "1.49.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.1",
@@ -27,6 +28,7 @@
     "@types/lodash": "4.14.178",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "@types/validator": "^13.7.2",
     "babel-jest": "27.4.6",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
