--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,7 +39,8 @@
     "rimraf": "3.0.2",
     "rxjs": "7.2.0",
     "sequelize": "6.17.0",
-    "sequelize-typescript": "2.1.3"
+    "sequelize-typescript": "2.1.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "8.0.0",
@@ -49,6 +50,7 @@
     "@types/jest": "27.4.1",
     "@types/node": "16.0.0",
     "@types/supertest": "2.0.11",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "5.0.0",
     "@typescript-eslint/parser": "5.0.0",
     "eslint": "8.0.1",
