add api scoring route. normalize address.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
     "stop:dev": "yarn db:dev:stop",
     "start:debug": "yarn db:dev:start && cross-env NODE_ENV=development  nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:prod:dump": "NODE_ENV=production RUN_DUMP=true node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env NODE_ENV=test jest",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
@@ -31,6 +32,7 @@
     "@nestjs/platform-express": "8.0.0",
     "@nestjs/sequelize": "8.0.0",
     "cross-env": "7.0.3",
+    "ethers": "^5.6.2",
     "jaccard-index": "^0.2.0",
     "lodash": "4.17.21",
     "pg": "8.7.3",
