--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "classnames": "2.3.1",
+    "ethers": "^5.6.2",
     "lodash": "4.17.21",
     "next": "12.0.9",
     "react": "17.0.2",
