--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "8.0.0",
     "@nestjs/sequelize": "8.0.0",
     "cross-env": "7.0.3",
+    "ethers": "^5.6.2",
     "jaccard-index": "^0.2.0",
     "lodash": "4.17.21",
     "pg": "8.7.3",
