--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "classnames": "2.3.1",
+    "d3": "3.5.17",
     "ethers": "^5.6.2",
     "lodash": "4.17.21",
     "next": "12.0.9",
@@ -26,6 +27,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "@types/axios": "^0.14.0",
+    "@types/d3": "3.5.36",
     "@types/lodash": "4.14.178",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
