--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,6 +33,7 @@
     "cross-env": "7.0.3",
     "ethers": "^5.6.2",
     "jaccard-index": "^0.2.0",
+    "js-base64": "^3.7.2",
     "lodash": "4.17.21",
     "pg": "8.7.3",
     "pg-hstore": "2.3.4",
