--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "8.0.0",
     "@nestjs/platform-express": "8.0.0",
     "@nestjs/sequelize": "8.0.0",
+    "body-parser": "^1.19.0",
     "cross-env": "7.0.3",
     "ethers": "^5.6.2",
     "jaccard-index": "^0.2.0",
