--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
   ],
   "volta": {
     "node": "16.14.0"
+  },
+  "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.1.0",
+    "ethers": "^5.6.5",
+    "wagmi": "^0.3.5"
   }
 }
