--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
     "db:dev:stop": "docker-compose --env-file ./.env.development down"
   },
   "dependencies": {
+    "@aws/web3-http-provider": "^1.0.1",
     "@nestjs/common": "8.0.0",
     "@nestjs/config": "1.2.0",
     "@nestjs/core": "8.0.0",
@@ -43,7 +44,8 @@
     "rxjs": "7.2.0",
     "sequelize": "6.17.0",
     "sequelize-typescript": "2.1.3",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "web3-providers-http": "^1.7.3"
   },
   "devDependencies": {
     "@nestjs/cli": "8.0.0",
