--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --port 5003",
     "build": "next build",
     "start": "next start --port 5003",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "test": "jest"
   },
   "dependencies": {
